package Exercicio_02;

public class FilmeIndisponivelException extends Exception {
    public FilmeIndisponivelException(String message) {
        super(message);
    }
}
