package Exercicio_02;

public class FilmeNaoEncontradoException extends Exception {
    public FilmeNaoEncontradoException(String message) {
        super(message);
    }
}
